Let Travis deploy Maven site for jflex-maven-plugin (#266)
* Roll forward "Make Travis deploy Maven site on github pages"
  - reverts commit a291b1ad98b824e06189847be94216a089a4a97d.
* Re-design the site
  - Fresh skin
  - project info (about, summary, plugins, deps)
  - project reports (javadoc, findbugs)
  - links to jflex.de (home, docs, etc.) and github (source, releases)
* Only compile the jflex-maven-plugin site for now
* Only deploy site for the "unit" TEST_SUITE
* Only deploy site on branch "master"
* I didn't manage to use the deploy script with mvn site-deploy and the github's site-maven-plugin
  * use before-deploy fo build the staging site
  * deploy with the pages provider
* Remove timestamp in javadoc
* Skip cleanup
* Save OAuth in Travis dashboard

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,29 @@
 language: java
 
 jdk:
-  - openjdk7
-  - openjdk8
+- openjdk7
+- openjdk8
 
-# mvn installation is not needed for ant, so we do it ourselves
 install: true
 
 script: ./scripts/run-tests.sh
 
 env:
+  matrix:
   - TEST_SUITE=ant
   - TEST_SUITE=unit
   - TEST_SUITE=regression
+
+before_deploy: ./scripts/before-deploy.sh
+
+deploy:
+  provider: pages
+  skip_cleanup: true
+  # GITHUB_TOKEN set in travis-ci.org dashboard
+  github_token: $GITHUB_TOKEN
+  on:
+    branch: master
+    condition: $TEST_SUITE = unit
+  local_dir: target/maven-staging-site
+  repo: jflex-de/jflex-web
+  name: Travis site-deploy bot
