--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ script: ./scripts/run-tests.sh
 
 env:
   matrix:
+  - TEST_SUITE=check-format
   - TEST_SUITE=ant
   - TEST_SUITE=unit
   - TEST_SUITE=regression
