--- a/pom.xml
+++ b/pom.xml
@@ -432,7 +432,8 @@
       <activation>
         <jdk>1.8</jdk>
         <property>
-          <name>env.CI</name>
+          <name>env.TEST_SUITE</name>
+          <value>check-format</value>
         </property>
       </activation>
       <build>
@@ -442,6 +443,7 @@
             <artifactId>fmt-maven-plugin</artifactId>
             <executions>
               <execution>
+                <phase>validate</phase>
                 <goals>
                   <goal>check</goal>
                 </goals>
