Rename uberjar to jflex-full-VERSION.jar (#262)
* Rename the uber jar flex-full-${VERSION}.jar
* Update scritps
* Update jflex-testsuite-maven-plugin to get the uberjar by configuration rather than hardcoding a `~/.m2/repository` path (fixes #261)
  - the jflex testsuite plugin requires the uberjar, whose path is provided by configuration
  - the default configuration is sensible default value
* Improve jflex-testsuite-maven-plugin
  - Use mojo annotations rather than at-clauses
  - Fix `CustomClassLoader.getZipEntryStream()` abusively closing the zip stream.
  - Find the jflex version from `pom.properties` of the loaded jflex.jar, rather than parsig the output of cli `jflex --help`
  - Also pass the jflex uer jar to the TestCase initialization, because javac needs it to compile the generator under test.
  - Throw exception of jar cannot be opened.
* Format code

--- a/jflex/pom.xml
+++ b/jflex/pom.xml
@@ -150,6 +150,7 @@
               <goal>shade</goal>
             </goals>
             <configuration>
+              <finalName>${artifactId}-full-${version}</finalName>
               <artifactSet>
                 <includes>
                   <include>de.jflex:cup_runtime</include>
