--- a/pom.xml
+++ b/pom.xml
@@ -181,6 +181,11 @@
           <version>1.0</version>
         </plugin>
         <plugin>
+          <groupId>com.coveo</groupId>
+          <artifactId>fmt-maven-plugin</artifactId>
+          <version>2.2.0</version>
+        </plugin>
+        <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.7.0</version>
         </plugin>
