--- a/pom.xml
+++ b/pom.xml
@@ -316,6 +316,9 @@
     <plugins>
       <plugin>
         <artifactId>maven-project-info-reports-plugin</artifactId>
+        <!-- Use a version compatible with maven 3
+             https://maven.apache.org/plugins/maven-site-plugin/maven-3.html -->
+        <version>2.2</version>
         <reportSets>
           <reportSet>
             <reports>
