--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ cache:
 
 # Empty our own artefacts from the cache. Those need to be build and installed.
 before_cache:
-  - rm -rf $HOME/.m2/repository/de/jflex
+  - find $HOME/.m2/repository/de/jflex -name '*-SNAPSHOT.*' -exec rm -rf {} \; || true
 
 # Build the maven site
 before_deploy: ./scripts/before-deploy.sh
