--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ cache:
   timeout: 86400  # 24 hours
   directories:
   - $HOME/.m2
+  - jflex/lib
 
 # Empty our own artifacts from the cache. Those need to be build and installed.
 before_cache: ./scripts/clean.sh
