--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,20 @@ env:
   - TEST_SUITE=unit
   - TEST_SUITE=regression
 
+# Travis sometimes fails to download deps from repo1.maven.org
+# A cache avoids downloading too much, and will also speed up the build.
+# NB: There is one cache per branch and language version/ compiler version/ JDK version
+cache:
+  # The timeout (in seconds) empties the cache to avoid being stuck with a corrupted artefact
+  timeout: 86400  # 24 hours
+  directories:
+  - $HOME/.m2
+  - jflex/lib
+
+# Empty our own artifacts from the cache. Those need to be build and installed.
+before_cache: ./scripts/clean.sh
+
+# Build the maven site
 before_deploy: ./scripts/before-deploy.sh
 
 deploy:
