Revert "Don't clean the cache in the before_cache phase"
This reverts commit 816487cf4a6da4082baaf60962e72776df6372c4.

Reason: the before_install phase calls `mvn site` which cannot work because the build artifacts haven't been done yet.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,6 @@ jdk:
 - openjdk7
 - oraclejdk8
 
-# Empty the previously built artifacts
-# They cannot be deleted in the before_cache phase,
-# otherwise `mvn site` fails in the before_deploy phase.
-before_install: ./scripts/before-deploy.sh
-
 install: true
 
 script: ./scripts/run-tests.sh
@@ -33,6 +28,9 @@ cache:
   directories:
   - $HOME/.m2
   - jflex/lib
+
+# Empty our own artifacts from the cache. Those need to be build and installed.
+before_cache: ./scripts/clean.sh
 
 # Build the maven site
 before_deploy: ./scripts/before-deploy.sh
