--- a/jflex/examples/simple-maven/pom.xml
+++ b/jflex/examples/simple-maven/pom.xml
@@ -35,4 +35,7 @@
       </plugin>
     </plugins>
   </build>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
 </project>
