--- a/.travis.yml
+++ b/.travis.yml
@@ -9,20 +9,35 @@ jdk:
 - openjdk7
 - oraclejdk8
 
-# Empty the previously built artifacts
-# They cannot be deleted in the before_cache phase,
-# otherwise `mvn site` fails in the before_deploy phase.
-before_install: ./scripts/clean.sh
+# Prerequisites for Bazel
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - curl
+      - pkg-config
+      - zip
+      - g++
+      - zlib1g-dev
+      - unzip
+      - python
 
-install: true
+# Download bazel
+before_install:
+  - curl -L https://github.com/bazelbuild/bazel/releases/download/0.16.1/bazel_0.16.1-linux-x86_64.deb -o downloads/bazel.deb
 
-script: ./scripts/run-tests.sh
+# Install bazel itself
+install:
+  - sudo dpkg -i downloads/bazel.deb
+
+script:
+  bazel run //java/com/example/hello:Hello
 
 env:
   matrix:
-  - TEST_SUITE=ant
   - TEST_SUITE=unit
-  - TEST_SUITE=regression
+# TODO - TEST_SUITE=regression
 
 # Travis sometimes fails to download deps from repo1.maven.org
 # A cache avoids downloading too much, and will also speed up the build.
@@ -31,20 +46,19 @@ cache:
   # The timeout (in seconds) empties the cache to avoid being stuck with a corrupted artefact
   timeout: 86400  # 24 hours
   directories:
-  - $HOME/.m2
-  - jflex/lib
+  - downloads
 
 # Build the maven site
-before_deploy: ./scripts/before-deploy.sh
+#before_deploy: ./scripts/before-deploy.sh
 
-deploy:
-  provider: pages
-  skip_cleanup: true
+#deploy:
+#  provider: pages
+#  skip_cleanup: true
   # GITHUB_TOKEN set in travis-ci.org dashboard
-  github_token: $GITHUB_TOKEN
-  on:
-    branch: master
-    condition: $TEST_SUITE = unit
-  local_dir: target/maven-staging-site
-  repo: jflex-de/jflex-web
-  name: Travis site-deploy bot
+#  github_token: $GITHUB_TOKEN
+#  on:
+#    branch: master
+#    condition: $TEST_SUITE = unit
+#  local_dir: target/maven-staging-site
+#  repo: jflex-de/jflex-web
+#  name: Travis site-deploy bot
