Keep Java 7 compatibility

--- a/java/com/example/hello/BUILD
+++ b/java/com/example/hello/BUILD
@@ -1,6 +1,7 @@
 java_library(
   name = "hello",
   srcs = ["Hello.java"],
+  javacopts = ["-source","7","-target","7"],
 )
 
 java_binary(
@@ -8,4 +9,5 @@ java_binary(
   runtime_deps = [
     ":hello",
   ],
+  javacopts = ["-source","7","-target","7"],
 )
