Allow the testsuite to stop on failure

--- a/testsuite/testcases/pom.xml
+++ b/testsuite/testcases/pom.xml
@@ -38,6 +38,7 @@
             <configuration>
               <verbose>${verbose}</verbose>
               <testcases>${testcases}</testcases>
+              <stopOnFailure>true</stopOnFailure>
             </configuration>
           </execution>
         </executions>
