--- a/cup/sample-project/BUILD
+++ b/cup/sample-project/BUILD
@@ -2,5 +2,5 @@ load("//bazel:cup_rules.bzl", "cup")
 
 cup(
     name = "gen_java",
-    srcs = ["src/main/cup/calculator.cup"],
+    srcs = ["calculator.cup"],
 )
