Try to compile jflex WIP
Reorganize classes to avoid circular deps

TODO: Generate LexScan from .flex file (bootstrap)

--- a/cup/cup_runtime/BUILD
+++ b/cup/cup_runtime/BUILD
@@ -1,4 +1,5 @@
 alias(
     name = "cup_runtime",
     actual = "//cup/cup_runtime/src/main/java:cup_runtime",
+    visibility = ["//visibility:public"],
 )
