--- a/cup/cup_runtime/src/main/java/BUILD
+++ b/cup/cup_runtime/src/main/java/BUILD
@@ -1,5 +1,5 @@
 java_library(
     name = "cup_runtime",
-    srcs = glob(["**/*.jar"]),
+    srcs = glob(["**/*.java"]),
     visibility = ["//cup/cup_runtime:__pkg__"],
 )
