--- a/cup/BUILD
+++ b/cup/BUILD
@@ -1,6 +1,12 @@
+package(default_visibility = ["//visibility:public"])
+
 java_binary(
     name = "cup_bin",
     main_class = "java_cup.Main",
-    visibility = ["//visibility:public"],
     runtime_deps = ["//cup/cup"],
+)
+
+alias(
+    name = "cup",
+    actual = "//cup/cup"
 )
