Minor: Move cup in 11b directory

--- a/cup/cup/BUILD
+++ b/cup/cup/BUILD
@@ -1,5 +1,5 @@
-java_import(
+alias(
     name = "cup",
-    jars = ["java-cup-11b.jar"],
+    actual = "//cup/cup/11b:cup",
     visibility = ["//visibility:public"],
 )
