--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,7 @@ jobs:
     - stage: test
       script:
         - bazel build //cup/sample-project:gen_java
+        - bazel build jflex:jflex_gui_bin
 
 env:
   matrix:
