--- a/jflex/BUILD
+++ b/jflex/BUILD
@@ -1,6 +1,25 @@
+package(default_visibility = ["//visibility:public"])
+
 alias(
     name = "jflex",
     actual = "//jflex/src/main"
+)
+
+java_binary(
+    name = "jflex_bin",
+    runtime_deps = [
+        ":jflex",
+    ],
+    main_class = "jflex.Main",
+)
+
+java_binary(
+    name = "jflex_gui_bin",
+    runtime_deps = [
+        ":jflex",
+        "//jflex/src/main/java/jflex/gui",
+    ],
+    main_class = "jflex.gui.Gui",
 )
 
 alias(
