--- a/jflex-maven-plugin/src/test/java/de/jflex/plugin/maven/BUILD
+++ b/jflex-maven-plugin/src/test/java/de/jflex/plugin/maven/BUILD
@@ -14,11 +14,17 @@ java_test(
         "//third_party/org/apache/maven/testing:maven_plugin_testing_harness",
     ],
     runtime_deps = [
+        "//third_party/aopalliance",
+        "//third_party/com/google/guava",
+        "//third_party/com/google/inject:guice",
+        "//third_party/org/codehaus/plexus:plexus_component_annotations", 
         "//third_party/org/codehaus/plexus:plexus_classworlds", 
-        "//third_party/org/codehaus/plexus:plexus_container_default", 
         "//third_party/org/codehaus/plexus:plexus_utils", 
         "//third_party/org/apache/maven:maven_artifact",
         "//third_party/org/apache/maven:maven_core",
+        "//third_party/org/apache/maven:maven_model",
         "//third_party/org/eclipse/sisu",
+        "//third_party/org/eclipse/sisu:sisu_inject",
+        "//third_party/org/eclipse/aether:aether_api",
     ],
 )
