Test jflex-maven-plugin. Load META-INF via a stupid zip generule.
Now failing with org.codehaus.plexus.component.repository.exception.ComponentLookupException: java.util.NoSuchElementException
      role: org.apache.maven.repository.RepositorySystem
  roleHint:
	at org.codehaus.plexus.DefaultPlexusContainer.lookup(DefaultPlexusContainer.java:267)

--- a/jflex-maven-plugin/src/test/java/de/jflex/plugin/maven/BUILD
+++ b/jflex-maven-plugin/src/test/java/de/jflex/plugin/maven/BUILD
@@ -26,5 +26,6 @@ java_test(
         "//third_party/org/eclipse/sisu",
         "//third_party/org/eclipse/sisu:sisu_inject",
         "//third_party/org/eclipse/aether:aether_api",
+        "//jflex-maven-plugin/src/test:res",
     ],
 )
