Fix jflex build

--- a/jflex-maven-plugin/src/main/java/de/jflex/plugin/maven/BUILD
+++ b/jflex-maven-plugin/src/main/java/de/jflex/plugin/maven/BUILD
@@ -4,6 +4,7 @@ java_library(
     deps = [
         "//jflex",
         "//third_party/commons_io",
+        "//third_party/org/apache/maven:maven_core",
         "//third_party/org/apache/maven:maven_plugin_api",
         "//third_party/org/apache/maven/plugin_tools:maven_plugin_annotations",
     ],
