jflex-maven-plugin Dep on sisu
NoClassDefFoundError: org/eclipse/aether/RepositorySystemSession
	at de.jflex.plugin.maven.JFlexMojoTest.<init>(JFlexMojoTest.java:24)
	at sun.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)

--- a/jflex-maven-plugin/src/test/java/de/jflex/plugin/maven/BUILD
+++ b/jflex-maven-plugin/src/test/java/de/jflex/plugin/maven/BUILD
@@ -12,5 +12,6 @@ java_test(
     deps = [
         "//jflex-maven-plugin/src/main",
         "//third_party/org/apache/maven/testing:maven_plugin_testing_harness",
+        "//third_party/org/eclipse/sisu/plexus",
     ],
 )
