jflex-maven-plugin test running
3) testTestResources(de.jflex.plugin.maven.JFlexMojoTest)
java.lang.AssertionError: Test project directory does not exist: /private/var/tmp/_bazel_regisd/7163a9e1c27558e3ee879928afc3313e/sandbox/darwin-sandbox/1/execroot/__main__/bazel-out/darwin-fastbuild/bin/jflex-maven-plugin/src/test/java/de/jflex/plugin/maven/JFlexMojoTest.runfiles/__main__/src/test/projects/single-file-test
	at org.junit.Assert.fail(Assert.java:88)

--- a/jflex-maven-plugin/src/test/java/de/jflex/plugin/maven/BUILD
+++ b/jflex-maven-plugin/src/test/java/de/jflex/plugin/maven/BUILD
@@ -12,7 +12,10 @@ java_test(
     deps = [
         "//jflex-maven-plugin/src/main",
         "//third_party/org/apache/maven/testing:maven_plugin_testing_harness",
-        "//third_party/org/eclipse/aether",
-        "//third_party/org/eclipse/sisu/plexus",
     ],
+    runtime_deps = [
+        "//jflex-maven-plugin/src/test:res",
+        "//third_party:org_apache_maven_maven_compat",
+    ]
+    
 )
