--- a/jflex-maven-plugin/src/test/java/de/jflex/plugin/maven/BUILD
+++ b/jflex-maven-plugin/src/test/java/de/jflex/plugin/maven/BUILD
@@ -14,8 +14,10 @@ java_test(
         "//third_party/org/apache/maven/testing:maven_plugin_testing_harness",
     ],
     runtime_deps = [
-        "//jflex-maven-plugin/src/test:res",
+        "//jflex-maven-plugin/src/test:test_res",
         "//third_party:org_apache_maven_maven_compat",
-    ]
-    
+    ],
+    data = [
+        "//jflex-maven-plugin/src/test:test_data",
+    ],
 )
