Macro maven_plugin_test

--- a/jflex-maven-plugin/src/test/java/de/jflex/plugin/maven/BUILD
+++ b/jflex-maven-plugin/src/test/java/de/jflex/plugin/maven/BUILD
@@ -1,3 +1,5 @@
+load("//bazel:maven_rules.bzl", "maven_plugin_test")
+
 java_test(
     name = "ClassInfoTest",
     srcs = ["ClassInfoTest.java"],
@@ -6,18 +8,16 @@ java_test(
     ]
 )
 
-java_test(
+maven_plugin_test(
     name = "JFlexMojoTest",
     srcs = ["JFlexMojoTest.java"],
     deps = [
         "//jflex-maven-plugin/src/main",
-        "//third_party/org/apache/maven/testing:maven_plugin_testing_harness",
     ],
     runtime_deps = [
         "//jflex-maven-plugin/src/test:test_res",
-        "//third_party:org_apache_maven_maven_compat",
     ],
     data = [
         "//jflex-maven-plugin/src/test:test_data",
-    ],
+    ],  
 )
