Split BUILD of unicode

--- a/jflex/src/main/java/jflex/unicode/BUILD
+++ b/jflex/src/main/java/jflex/unicode/BUILD
@@ -2,5 +2,8 @@ java_library(
     name = "unicode",
     srcs = glob(["**/*.java"]),
     visibility = ["//jflex:__subpackages__"],
-    deps = ["//jflex/src/main/java/jflex/exception"],
+    deps = [
+        "//jflex/src/main/java/jflex/exception",
+        "//jflex/src/main/java/jflex/unicode/data:unicode_data",
+    ],
 )
