--- a/.travis.yml
+++ b/.travis.yml
@@ -34,10 +34,8 @@ install:
 script:
 # TODO(regisd) Reformat code once we are ready to submit
 # - java -jar downloads/google-java-format-1.6-all-deps.jar -n --set-exit-if-changed $(find jflex -name '*.java' | tr '\n' ' ')
-  - bazel --bazelrc=$TRAVIS_BUILD_DIR/.travis.bazelrc build //cup/sample-project:gen_java
-  - bazel --bazelrc=$TRAVIS_BUILD_DIR/.travis.bazelrc build //jflex:jflex_gui_bin
-  - bazel --bazelrc=$TRAVIS_BUILD_DIR/.travis.bazelrc test //jflex/...
-  - bazel --bazelrc=$TRAVIS_BUILD_DIR/.travis.bazelrc test //jflex-maven-plugin/...
+  - bazel --bazelrc=$TRAVIS_BUILD_DIR/.travis.bazelrc build //...
+  - bazel --bazelrc=$TRAVIS_BUILD_DIR/.travis.bazelrc test  //...
   - bazel --bazelrc=$TRAVIS_BUILD_DIR/.travis.bazelrc shutdown
 
 env:
