Use --remote_http_cache correctly

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -2,6 +2,6 @@ container:
   image: cirrusci/bazel:latest
 task:
   build_script:
-  - bazel --bazelrc=.cirrus.bazelrc --remote_http_cache=http://$CIRRUS_HTTP_CACHE_HOST build //..
+  - bazel --bazelrc=.cirrus.bazelrc build --remote_http_cache=http://$CIRRUS_HTTP_CACHE_HOST //...
   test_script:
-  - bazel --bazelrc=.cirrus.bazelrc --remote_http_cache=http://$CIRRUS_HTTP_CACHE_HOST test //...
+  - bazel --bazelrc=.cirrus.bazelrc build --remote_http_cache=http://$CIRRUS_HTTP_CACHE_HOST //...
