Use JFlexMojo encoding option in one of the examples

--- a/jflex/examples/standalone-maven/pom.xml
+++ b/jflex/examples/standalone-maven/pom.xml
@@ -27,6 +27,9 @@ of "hello" by "hello <name> !".]]></description>
             <goals>
               <goal>generate</goal>
             </goals>
+            <configuration>
+              <encoding>utf-8</encoding>
+            </configuration>
           </execution>
         </executions>
       </plugin>
