use consistent email address

--- a/jflex/pom.xml
+++ b/jflex/pom.xml
@@ -27,7 +27,7 @@
     <developer>
       <id>lsf37</id>
       <name>Gerwin Klein</name>
-      <email>gerwin.klein@nicta.com.au</email>
+      <email>lsf@jflex.de</email>
       <roles>
         <role>founder</role>
         <role>developer</role>
