--- a/testsuite/jflex-testsuite-maven-plugin/pom.xml
+++ b/testsuite/jflex-testsuite-maven-plugin/pom.xml
@@ -24,7 +24,7 @@
     <developer>
       <id>lsf37</id>
       <name>Gerwin Klein</name>
-      <email>gerwin.klein@nicta.com.au</email>
+      <email>lsf@jflex.de</email>
       <roles>
         <role>developer</role>
       </roles>
