--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <developer>
       <id>lsf37</id>
       <name>Gerwin Klein</name>
-      <email>gerwin.klein@nicta.com.au</email>
+      <email>lsf@jflex.de</email>
       <roles>
         <role>founder</role>
         <role>developer</role>
