--- a/testsuite/testcases/pom.xml
+++ b/testsuite/testcases/pom.xml
@@ -20,7 +20,7 @@
     <dependency>
       <groupId>de.jflex</groupId>
       <artifactId>jflex</artifactId>
-      <version>1.7.0-SNAPSHOT</version>
+      <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
