--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -4,4 +4,4 @@ task:
   build_script:
   - bazel --bazelrc=.cirrus.bazelrc build --remote_http_cache=http://$CIRRUS_HTTP_CACHE_HOST //...
   test_script:
-  - bazel --bazelrc=.cirrus.bazelrc build --remote_http_cache=http://$CIRRUS_HTTP_CACHE_HOST //...
+  - bazel --bazelrc=.cirrus.bazelrc test --remote_http_cache=http://$CIRRUS_HTTP_CACHE_HOST //...
