Let Travis update the aggregated-java-sources branch (#318)
For #271

* Let Travis the source:aggregate artefact to aggregate-java-sources branch
- Run `mvn source:aggregate`
  This creates a jar containing all java sources accross all projects, _incl. generated-sources_
- Checkout the **aggregated-java-sources** branch in a `repo` directory
- git rm all
- explode the jflex-parent-VERSION-sources.jar
- remove unrelated sources (e.g. plugins)
- git add all
- git commit
- If running in **master**, git push. This is to avoid updating the source with PR.
* Let Travis compile branch **aggregted-java-sources** as well

Fix #271

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@
 branches:
   only:
   - master
+  - aggregated-java-sources
 
 language: java
 
@@ -17,6 +18,9 @@ before_install: ./scripts/clean.sh
 install: true
 
 script: ./scripts/run-tests.sh
+
+after_success:
+  - ./scripts/desploy-source-code.sh
 
 env:
   matrix:
