--- a/jflex/build.xml
+++ b/jflex/build.xml
@@ -3,7 +3,7 @@
 
   <property environment="env" />
 
-  <property name="version" value="1.7.0-SNAPSHOT" />
+  <property name="version" value="1.7.0" />
   <property name="bootstrap.version" value="1.6.1" />
   <property name="junit.version" value="4.11" />
   <property name="cup.version" value="11b" />
