--- a/jflex/examples/cup-maven/pom.xml
+++ b/jflex/examples/cup-maven/pom.xml
@@ -29,7 +29,7 @@
       <plugin>
         <groupId>de.jflex</groupId>
         <artifactId>jflex-maven-plugin</artifactId>
-        <version>1.7.0-SNAPSHOT</version>
+        <version>1.7.0</version>
         <executions>
           <execution>
             <goals>
