Keep deploying Maven site to jflex-web (#327)
* Keep deploying gh pages on jflex-web

Partial Revert "Keep deployment history" (commit e4bf31201ba79cef2e594a1edf20fe5561936c3a)

--- a/.travis.yml
+++ b/.travis.yml
@@ -50,6 +50,7 @@ deploy:
     branch: master
     condition: $TEST_SUITE = unit
   local_dir: target/maven-staging-site/maven-site
-  repo: jflex-de/jflex
+  repo: jflex-de/jflex-web
   name: Travis site-deploy bot
   keep-history: true
+
