Also build site in PR presubmit

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,9 @@ cache:
   - jflex/lib
 
 # Build the maven site
-before_deploy: ./scripts/before-deploy.sh
+before_deploy:
+- if [ "_$TEST_SUITE" == "_unit" ]; then ./mvnw site; fi
+- ./scripts/before-deploy.sh
 
 deploy:
   provider: pages
