Move resources in the correct location
The location of the resources inside of the jar file is determined by the project structure. Bazel first looks for Maven's standard directory layout, (a "src" directory followed by a "resources" directory grandchild). If that is not found, Bazel then looks for the topmost directory named "java" or "javatests" (so, for example, if a resource is at <workspace root>/x/java/y/java/z, the path of the resource will be y/java/z. This heuristic cannot be overridden.

--- a/jflex/java/jflex/BUILD
+++ b/jflex/java/jflex/BUILD
@@ -7,8 +7,9 @@ java_library(
         "//jflex/lex:gen_scanner",
     ],
     resources = [
-        "//jflex/java/resources",
-    ],
+                        "Messages.properties",
+                        "skeleton.default",
+                    ],
     deps = [
         "//third_party/java_cup",
         "//jflex/java/jflex/base",
