--- a/jflex/examples/simple-maven/pom.xml
+++ b/jflex/examples/simple-maven/pom.xml
@@ -24,7 +24,7 @@
       <plugin>
         <groupId>de.jflex</groupId>
         <artifactId>jflex-maven-plugin</artifactId>
-        <version>1.7.0</version>
+        <version>1.7.1-SNAPSHOT</version>
         <executions>
           <execution>
             <goals>
