Give jflex task access to java_cup runtime.
Fixes #343 for now. Should update the ant task documentation..

--- a/jflex/build.xml
+++ b/jflex/build.xml
@@ -130,7 +130,7 @@
 
   <target name="-generate-scanner">
     <taskdef classname="jflex.anttask.JFlexTask" 
-             name="jflex" classpath="${bootstrap.jflex.jar}"/>
+             name="jflex" classpath="${bootstrap.jflex.jar}:${cup.jar}"/>
     <mkdir dir="${generated.sources.dir}"/>
     <jflex file="src/main/jflex/LexScan.flex"
            destdir="${generated.sources.dir}"
