--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,16 @@ branches:
 
 language: java
 
+# TODO(regisd) Remove the build matrix ; it really makes the deploy phase more complex
 jdk:
 - openjdk7
 - oraclejdk8
+
+env:
+  matrix:
+  - TEST_SUITE=ant
+  - TEST_SUITE=unit
+  - TEST_SUITE=regression
 
 # Empty the previously built artifacts
 # They cannot be deleted in the before_cache phase,
@@ -19,11 +26,9 @@ install: ./mvnw -version
 
 script: ./scripts/run-tests.sh
 
-env:
-  matrix:
-  - TEST_SUITE=ant
-  - TEST_SUITE=unit
-  - TEST_SUITE=regression
+after_success:
+- ./scripts/mvn-site.sh
+- ./scripts/mvn-aggregate-srcs.sh
 
 # Travis sometimes fails to download deps from repo1.maven.org
 # A cache avoids downloading too much, and will also speed up the build.
@@ -35,21 +40,27 @@ cache:
   - $HOME/.m2
   - jflex/lib
 
-# Build the maven site
-after_success:
-- ./scripts/before-deploy.sh
-- ./scripts/deploy-source-code.sh
-
 deploy:
-  provider: pages
+# Deploy the maven site on Github pages
+- provider: pages
   skip_cleanup: true
+  on:
+    branch: release
+    condition:
+    - $TEST_SUITE = unit
+    - $TRAVIS_JDK_VERSION = oraclejdk8
+  local_dir: target/maven-staging-site/maven-site
   # GITHUB_TOKEN set in travis-ci.org dashboard
   github_token: $GITHUB_TOKEN
-  on:
-    branch: master
-    condition: $TEST_SUITE = unit
-  local_dir: target/maven-staging-site/maven-site
   repo: jflex-de/jflex-web
   name: Travis site-deploy bot
   keep-history: true
-
+# Aggregate sources and push to branch aggregated-java-sources
+- provider: script
+  skip_cleanup: true
+  on:
+    branch: master
+    condition:
+    - $TEST_SUITE = unit
+    - $TRAVIS_JDK_VERSION = oraclejdk8
+  script: ./scripts/deploy-source-code.sh
