Also deploy aggregated-java-sources on branch release
Because master is already bumped to 1.7.1

--- a/.travis.yml
+++ b/.travis.yml
@@ -60,7 +60,9 @@ deploy:
 - provider: script
   skip_cleanup: true
   on:
-    branch: master
+    branch:
+    - master
+    - release
     condition:
     - $TEST_SUITE = unit
     - $TRAVIS_JDK_VERSION = oraclejdk8
