--- a/.travis.yml
+++ b/.travis.yml
@@ -59,7 +59,9 @@ deploy:
 - provider: script
   skip_cleanup: true
   on:
-    branch: master
+    branch:
+    - master
+    - deploy-sources
     condition:
     - $TEST_SUITE = unit
     - $TRAVIS_JDK_VERSION = oraclejdk8
