--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ branches:
   only:
   - master
   - aggregated-java-sources
+  - deploy-sources
 
 language: java
 
@@ -26,6 +27,7 @@ script: ./scripts/run-tests.sh
 after_success:
 - ./scripts/mvn-site.sh
 - ./scripts/mvn-aggregate-srcs.sh
+- ./scripts/deploy-source-code.sh
 
 # Travis sometimes fails to download deps from repo1.maven.org
 # A cache avoids downloading too much, and will also speed up the build.
