Also run Travis on branch Travis.
master shoudn't behave differently. It's too hard to investigate Travis deployment issues if they appear only on master.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ branches:
   only:
   - master
   - aggregated-java-sources
+  - travis
 
 language: java
 
@@ -59,8 +60,10 @@ deploy:
 - provider: script
   skip_cleanup: true
   on:
-    branch: master
+    branch:
+    - master
+    - travis
     condition:
     - $TEST_SUITE = unit
     - $TRAVIS_JDK_VERSION = oraclejdk8
-  script: true || ./scripts/deploy-source-code.sh
+  script: ./scripts/deploy-source-code.sh
