Replace commons-io by Guava (#319)
* Replace dep on org.apache.commons.io.FileUtils; by Guava com.google.common.io.Files

--- a/jflex-maven-plugin/pom.xml
+++ b/jflex-maven-plugin/pom.xml
@@ -78,8 +78,8 @@
   </build>
   <dependencies>
     <dependency>
-      <groupId>commons-io</groupId>
-      <artifactId>commons-io</artifactId>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
     </dependency>
     <dependency>
       <groupId>de.jflex</groupId>
