--- a/cup/pom.xml
+++ b/cup/pom.xml
@@ -50,6 +50,14 @@
 
   <build>
     <plugins>
+      <!-- Java 9 doesn't support -source 1.5 anymore -->
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.6</source>
+          <target>1.6</target>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
@@ -67,6 +75,10 @@
     </plugins>
     <pluginManagement>
       <plugins>
+        <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.7.0</version>
+        </plugin>
         <plugin>
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.8.2</version>
