--- a/jflex/examples/cup-maven/pom.xml
+++ b/jflex/examples/cup-maven/pom.xml
@@ -13,15 +13,21 @@
     titled Compiler Construction Tools.</description>
   <dependencies>
     <dependency>
+      <groupId>de.jflex</groupId>
+      <artifactId>cup_runtime</artifactId>
+      <version>11b</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>de.jflex</groupId>
-      <artifactId>cup_runtime</artifactId>
-      <version>11b</version>
+      <groupId>com.google.truth</groupId>
+      <artifactId>truth</artifactId>
+      <version>0.36</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
   <build>
