--- a/jflex/examples/simple-maven/pom.xml
+++ b/jflex/examples/simple-maven/pom.xml
@@ -22,6 +22,12 @@
   <build>
     <plugins>
       <plugin>
+        <!-- N.B. From v3.8.0, then Java compiler plugin targets Java 6 by default -->
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.0</version>
+      </plugin>
+      <plugin>
         <groupId>de.jflex</groupId>
         <artifactId>jflex-maven-plugin</artifactId>
         <version>1.7.1-SNAPSHOT</version>
