--- a/jflex/examples/standalone-maven/pom.xml
+++ b/jflex/examples/standalone-maven/pom.xml
@@ -19,10 +19,13 @@ of "hello" by "hello &lt;name&gt; !".</description>
   <build>
     <plugins>
       <plugin>
-        <!-- N.B. From v3.8.0, then Java compiler plugin targets Java 6 by default -->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.0</version>
+        <configuration>
+          <source>1.6</source>
+          <target>1.6</target>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>de.jflex</groupId>
