--- a/.travis.yml
+++ b/.travis.yml
@@ -33,8 +33,8 @@ install: ./mvnw -version
 script: ./scripts/run-tests.sh
 
 after_success:
-- ./scripts/mvn-site.sh
-- ./scripts/mvn-aggregate-srcs.sh
+- [ "_$TEST_SUITE" != "_unit" ] || ./scripts/mvn-site.sh)
+- [ "_$TEST_SUITE" != "_unit" ] || ./scripts/mvn-aggregate-srcs.sh
 
 # Travis sometimes fails to download deps from repo1.maven.org
 # A cache avoids downloading too much, and will also speed up the build.
