--- a/testsuite/jflex-testsuite-maven-plugin/pom.xml
+++ b/testsuite/jflex-testsuite-maven-plugin/pom.xml
@@ -64,37 +64,27 @@
   </build>
   <profiles>
     <profile>
-      <id>windows_profile</id>
+      <!-- If this dependency is not included, the Ant Javac task can't find
+           the javac executable, because Maven automatically changes the
+           JAVA_HOME environment variable/system property to point to the
+           JRE rather than the JDK.  An alternative to including this dep.
+           is setting the Ant Javac object to use forking,
+           i.e. "javac.setFork(true);").
+           Since Java 9, there is no more split between the JRE and the JDK.
+      -->
+      <id>jdk_hack</id>
       <activation>
-        <os>
-          <family>Windows</family>
-        </os>
+        <jdk>(,1.8]</jdk>
       </activation>
-      <properties>
-        <toolsjar>${java.home}/../lib/tools.jar</toolsjar>
-      </properties>
-    </profile>
-    <profile>
-      <id>unix_profile</id>
-      <activation>
-        <os>
-          <family>Unix</family>
-        </os>
-      </activation>
-      <properties>
-        <toolsjar>${java.home}/../lib/tools.jar</toolsjar>
-      </properties>
-    </profile>
-    <profile>
-      <id>osx_profile</id>
-      <activation>
-        <os>
-          <family>mac</family>
-        </os>
-      </activation>
-      <properties>
-        <toolsjar>${java.home}/../lib/tools.jar</toolsjar>
-      </properties>
+      <dependencies>
+        <dependency>
+          <groupId>sun.jdk</groupId>
+          <artifactId>tools</artifactId>
+          <version>1.6.0</version>
+          <scope>system</scope>
+          <systemPath>${java.home}/../lib/tools.jar</systemPath>
+        </dependency>
+      </dependencies>
     </profile>
   </profiles>
   <dependencies>
@@ -114,19 +104,6 @@
       <groupId>de.jflex</groupId>
       <artifactId>jflex</artifactId>
       <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <!-- If this dependency is not included, the Ant Javac task can't find -->
-      <!-- the javac executable, because Maven automatically changes the     -->
-      <!-- JAVA_HOME environment variable/system property to point to the    -->
-      <!-- JRE rather than the JDK.  An alternative to including this dep.   -->
-      <!-- is setting the Ant Javac object to use forking,                   -->
-      <!-- i.e. "javac.setFork(true);").                                     -->
-      <groupId>sun.jdk</groupId>
-      <artifactId>tools</artifactId>
-      <version>1.5.0</version>
-      <scope>system</scope>
-      <systemPath>${toolsjar}</systemPath>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.plugin-tools</groupId>
